# FaultSense

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: graph.py  tools.py
api/: main.py
knowledge/: ingest.py
knowledge/chroma_store/: chroma.sqlite3
models/: rul_model.pt  scaler.pkl  train.py
